generalize naming conventions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "triangle-tracker",
+  "name": "template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -30,6 +30,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "serialize-javascript": "^2.1.1"
   }
 }
