Update files and add README.md

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Adela Darmansyah",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.4",
